--- a/index.html
+++ b/index.html
@@ -25,9 +25,79 @@
 </head>
 
 <body>
-  <?php
-  include("navbar.php");
-  ?>
+  <!-- topbar start here  -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 ms-auto text-md-end">
+        <div class="nav_top ms-auto">
+          <ul>
+            <li>
+              <a href="#">Find The consult</a>
+            </li>
+            <li>
+              <a href="#">Become a Consult</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- top bar end  -->
+  <!-- navbar start here  -->
+  <nav class="navbar navbar-expand-lg  ">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.gif" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="wedo.html" role="button">
+              What We Do
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="wedo.html#core">Core Service Areas</a></li>
+              <li><a class="dropdown-item" href="wedo.html#consult_model">Our Consulting Model</a></li>
+              <li><a class="dropdown-item" href="wedo.html#serve">industries We Serve</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="story.html" role="button">
+              What We Are
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="story.html#story">Our Story</a></li>
+              <li><a class="dropdown-item" href="team.html">Our Team</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="talent.html" role="button">
+              Talent
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="talent.html#why">Why astute360corp? </a></li>
+              <li><a class="dropdown-item" href="findtalent.html">Find a telent</a></li>
+              <li><a class="dropdown-item" href="becometalent.html">Become a telent</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="contact.html" role="button">
+              Contact
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="contact.html">Our Locations</a></li>
+            </ul>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- navbar end here  -->
 
   <!-- banner part start here  -->
   <section class="banner" style="background-image: url(images/home-bg-2.jpg);">
@@ -71,7 +141,7 @@
             </div>
             <div class="col-md-6">
               <div class="count_box">
-                <h4 ><span class="counter">20</span>+</h4>
+                <h4><span class="counter">20</span>+</h4>
                 <p>Unique Industries Served</p>
               </div>
             </div>
@@ -354,10 +424,65 @@
   </section>
   <!-- contact us part end here  -->
 
-  <?php
-  @include("footer.php");
-  ?>
-
+  <!-- footer part start here  -->
+  <section class="footer_top py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 text-center">
+          <a href="javascript:" style="text-decoration: none;"><img src="images/logo.gif" class="img-fluid" style="max-width: 200px;" alt=""></a>
+          <p class="fw-bold mb-0">Head Office </p>
+          <a href="#" style="list-style: none;text-decoration: none;">6065 Hillcroft Street, Suite # 610, Houston, TX 77081.</a>
+          <ul class="d-flex justify-content-center mt-2 align-items-center" style="list-style: none; padding: 0;">
+            <li class="me-2"><a href="#"><i class="fa-solid fa-brands fa-linkedin"></i></a></li>
+            <li class="me-2"><a href="#"><i class="fa-solid fa-brands fa-facebook"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 tab_hide">
+          <div class="qcLink">
+            <h2>What We Do</h2>
+            <ul>
+              <li><a href="#">Core Service Areas</a></li>
+              <li><a href="#">Our Consulting Model</a></li>
+              <li><a href="#">Contact Us </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 tab_hide">
+          <div class="qcLink">
+            <h2>Who We Are </h2>
+            <ul>
+              <li><a href="#">About Spotlight</a></li>
+              <li><a href="#">Our Team</a></li>
+              <li><a href="#">Our Values </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 tab_hide">
+          <div class="qcLink">
+            <h2>Talent</h2>
+            <ul>
+              <li><a href="#">Find the telent</a></li>
+              <li><a href="#">Become a telent</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="bg_s py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="d-flex justify-content-between">
+            <p class="text-center">© 2024 astute360corp.com | <a href="#">Privacy Policy</a>
+            </p>
+            <p>Website design by PRONAY</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- footer part end here  -->
 
 
 
@@ -365,7 +490,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> <!--Bootstrap-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
 
 
   <script>
