--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
   <!-- top bar end  -->
   <!-- navbar start here  -->
-  <nav class="navbar navbar-expand-lg  ">
+  <nav class="navbar navbar-expand-lg  nav_hide">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="images/logo.gif" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,6 +86,57 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="contact.html" role="button">
+              Contact
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="contact.html">Our Locations</a></li>
+            </ul>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- for mobile  -->
+  <nav class="navbar navbar-expand-lg  nav_show">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.gif" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="wedo.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              What We Do
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="wedo.html#core">Core Service Areas</a></li>
+              <li><a class="dropdown-item" href="wedo.html#consult_model">Our Consulting Model</a></li>
+              <li><a class="dropdown-item" href="wedo.html#serve">industries We Serve</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="story.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              What We Are
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="story.html#story">Our Story</a></li>
+              <li><a class="dropdown-item" href="team.html">Our Team</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="talent.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Talent
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="talent.html#why">Why astute360corp? </a></li>
+              <li><a class="dropdown-item" href="findtalent.html">Find a telent</a></li>
+              <li><a class="dropdown-item" href="becometalent.html">Become a telent</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="contact.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Contact
             </a>
             <ul class="dropdown-menu">
