--- a/becometalent.html
+++ b/becometalent.html
@@ -210,9 +210,9 @@
           <div class="qcLink">
             <h2>What We Do</h2>
             <ul>
-              <li><a href="#">Core Service Areas</a></li>
-              <li><a href="#">Our Consulting Model</a></li>
-              <li><a href="#">Contact Us </a></li>
+              <li><a href="wedo.html#core">Core Service Areas</a></li>
+              <li><a href="wedo.html#consult_model">Our Consulting Model</a></li>
+              <li><a href="contact.html">Contact Us </a></li>
             </ul>
           </div>
         </div>
@@ -220,9 +220,8 @@
           <div class="qcLink">
             <h2>Who We Are </h2>
             <ul>
-              <li><a href="#">About Spotlight</a></li>
-              <li><a href="#">Our Team</a></li>
-              <li><a href="#">Our Values </a></li>
+              <li><a href="talent.html#why">About Astute360corp</a></li>
+              <li><a href="team.html">Our Team</a></li>
             </ul>
           </div>
         </div>
@@ -230,8 +229,8 @@
           <div class="qcLink">
             <h2>Talent</h2>
             <ul>
-              <li><a href="#">Find the telent</a></li>
-              <li><a href="#">Become a telent</a></li>
+              <li><a href="findtalent.html">Find the telent</a></li>
+              <li><a href="becometalent.html">Become a telent</a></li>
             </ul>
           </div>
         </div>
@@ -245,7 +244,7 @@
           <div class="d-flex justify-content-between">
           <p class="text-center">© 2024 astute360corp.com | <a href="#">Privacy Policy</a>
           </p>
-          <p>Website design by PRONAY</p>
+          <p>Website design by Astute360corp</p>
           </div>
         </div>
       </div>
