--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
               <h2>We Are Creative</h2>
               <p>Our team exists to help you establish and implement better workflows, bring more efficient technology onboard, and succeed in ways only custom developed software would allow.</p>
               <div class="d-flex justify-content-center align-items-center">
-                <a href="javascript;" class="btn_primary">Find a telent</a>
-                <a href="javascript;" class="btn_secondary">Become a telent</a>
+                <a href="findtalent.html" class="btn_primary">Find a telent</a>
+                <a href="becometalent.html" class="btn_secondary">Become a telent</a>
               </div>
             </div>
           </div>
@@ -179,7 +179,7 @@
           <div class="svcLpart">
             <h1>Service Not Sale </h1>
             <p class="mb-2">Since 2009 we have provided dedicated service to our clients and consultants – our friends. With a rich history in consulting, we deliver the best people and solve your difficult business and technical challenges. It is this commitment that forges relationships and builds value through the intersection of trust and transparency.</p>
-            <a href="javascript;" class="btn_secondary mx-0 mt-2">What We Do</a>
+            <a href="wedo.html" class="btn_secondary mx-0 mt-2">What We Do</a>
           </div>
         </div>
         <div class="col-md-6 my-3">
@@ -492,9 +492,9 @@
           <div class="qcLink">
             <h2>What We Do</h2>
             <ul>
-              <li><a href="#">Core Service Areas</a></li>
-              <li><a href="#">Our Consulting Model</a></li>
-              <li><a href="#">Contact Us </a></li>
+              <li><a href="wedo.html#core">Core Service Areas</a></li>
+              <li><a href="wedo.html#consult_model">Our Consulting Model</a></li>
+              <li><a href="contact.html">Contact Us </a></li>
             </ul>
           </div>
         </div>
@@ -502,9 +502,8 @@
           <div class="qcLink">
             <h2>Who We Are </h2>
             <ul>
-              <li><a href="#">About Spotlight</a></li>
-              <li><a href="#">Our Team</a></li>
-              <li><a href="#">Our Values </a></li>
+              <li><a href="talent.html#why">About Astute360corp</a></li>
+              <li><a href="team.html">Our Team</a></li>
             </ul>
           </div>
         </div>
@@ -512,8 +511,8 @@
           <div class="qcLink">
             <h2>Talent</h2>
             <ul>
-              <li><a href="#">Find the telent</a></li>
-              <li><a href="#">Become a telent</a></li>
+              <li><a href="findtalent.html">Find the telent</a></li>
+              <li><a href="becometalent.html">Become a telent</a></li>
             </ul>
           </div>
         </div>
@@ -527,7 +526,7 @@
           <div class="d-flex justify-content-between">
             <p class="text-center">© 2024 astute360corp.com | <a href="#">Privacy Policy</a>
             </p>
-            <p>Website design by PRONAY</p>
+            <p>Website design by Astute360corp</p>
           </div>
         </div>
       </div>
