--- a/findtalent.html
+++ b/findtalent.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- bootstrap 5.3    -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <!-- fontawsome cdn  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -52,7 +53,9 @@
     <nav class="navbar navbar-expand-lg  ">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="images/logo.gif" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -118,9 +121,16 @@
                     <div class="content_title">
                         <h1 class="fw-bold">Our Model </h1>
                         <span class="rounded-0 mb-2"></span>
-                        <p class="mb-2">Talk with one of our consulting professionals today to help us assess your business strategy and identify gaps within your current teams. We engage our highly experienced technical recruiting team around every role to quickly and efficiently target the right blend of technical and soft skills. With our quality-over-quantity approach and consultant-level evaluation process, we work with you to implement individuals and teams that can seamlessly integrate into your strategy and deliver value to your business.
+                        <p class="mb-2">Talk with one of our consulting professionals today to help us assess your
+                            business strategy and identify gaps within your current teams. We engage our highly
+                            experienced technical recruiting team around every role to quickly and efficiently target
+                            the right blend of technical and soft skills. With our quality-over-quantity approach and
+                            consultant-level evaluation process, we work with you to implement individuals and teams
+                            that can seamlessly integrate into your strategy and deliver value to your business.
 
-                            Whether your goal is to augment existing teams or to invest in permanent and sustainable staff, you can count on us to help you quickly access the right talent when and how you need it.</p>
+                            Whether your goal is to augment existing teams or to invest in permanent and sustainable
+                            staff, you can count on us to help you quickly access the right talent when and how you need
+                            it.</p>
                         <a href="#" class="btn_primary mx-0 mt-2">Contact Our Team</a>
                         <!-- <span style="height: 2px;"></span> -->
                     </div>
@@ -139,7 +149,7 @@
             <div class="row">
                 <div class="col-md-6 m-auto">
                     <div class="stitle text-center">
-                        <h1 class="fs-3">Get Started With Spotlight Today</h1>
+                        <h1 class="fs-3">Get Started With Astute360corpToday</h1>
                         <span></span>
                     </div>
                 </div>
@@ -158,7 +168,8 @@
                                 <input type="text" placeholder="Your Subject" class="py-2 form-control rounded-0">
                             </div>
                             <div class="col-md-12 mb-2">
-                                <textarea name="" id="" cols="30" rows="6" class="form-control rounded-0" placeholder="Your message"></textarea>
+                                <textarea name="" id="" cols="30" rows="6" class="form-control rounded-0"
+                                    placeholder="Your message"></textarea>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn_primary text-center m-auto">Submit</button>
@@ -179,10 +190,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 text-center">
-                    <a href="javascript:" style="text-decoration: none;"><img src="images/logo.gif" class="img-fluid" style="max-width: 200px;" alt=""></a>
+                    <a href="javascript:" style="text-decoration: none;"><img src="images/logo.gif" class="img-fluid"
+                            style="max-width: 200px;" alt=""></a>
                     <p class="fw-bold mb-0">Head Office </p>
-                    <a href="#" style="list-style: none;text-decoration: none;">6065 Hillcroft Street, Suite # 610, Houston, TX 77081.</a>
-                    <ul class="d-flex justify-content-center mt-2 align-items-center" style="list-style: none; padding: 0;">
+                    <a href="#" style="list-style: none;text-decoration: none;">6065 Hillcroft Street, Suite # 610,
+                        Houston, TX 77081.</a>
+                    <ul class="d-flex justify-content-center mt-2 align-items-center"
+                        style="list-style: none; padding: 0;">
                         <li class="me-2"><a href="#"><i class="fa-solid fa-brands fa-linkedin"></i></a></li>
                         <li class="me-2"><a href="#"><i class="fa-solid fa-brands fa-facebook"></i></a></li>
                     </ul>
@@ -191,9 +205,9 @@
                     <div class="qcLink">
                         <h2>What We Do</h2>
                         <ul>
-                            <li><a href="#">Core Service Areas</a></li>
-                            <li><a href="#">Our Consulting Model</a></li>
-                            <li><a href="#">Contact Us </a></li>
+                            <li><a href="wedo.html#core">Core Service Areas</a></li>
+                            <li><a href="wedo.html#consult_model">Our Consulting Model</a></li>
+                            <li><a href="contact.html">Contact Us </a></li>
                         </ul>
                     </div>
                 </div>
@@ -201,9 +215,8 @@
                     <div class="qcLink">
                         <h2>Who We Are </h2>
                         <ul>
-                            <li><a href="#">About Spotlight</a></li>
-                            <li><a href="#">Our Team</a></li>
-                            <li><a href="#">Our Values </a></li>
+                            <li><a href="talent.html#why">About Astute360corp</a></li>
+                            <li><a href="team.html">Our Team</a></li>
                         </ul>
                     </div>
                 </div>
@@ -211,8 +224,8 @@
                     <div class="qcLink">
                         <h2>Talent</h2>
                         <ul>
-                            <li><a href="#">Find the telent</a></li>
-                            <li><a href="#">Become a telent</a></li>
+                            <li><a href="findtalent.html">Find the telent</a></li>
+                            <li><a href="becometalent.html">Become a telent</a></li>
                         </ul>
                     </div>
                 </div>
@@ -226,7 +239,7 @@
                     <div class="d-flex justify-content-between">
                         <p class="text-center">© 2024 astute360corp.com | <a href="#">Privacy Policy</a>
                         </p>
-                        <p>Website design by PRONAY</p>
+                        <p>Website design by Astute360corp</p>
                     </div>
                 </div>
             </div>
@@ -236,10 +249,14 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> <!--Jquery Cdn-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> <!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <!--Jquery Cdn-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script> <!--Bootstrap-->
     <script>
-        $(window).scroll(function() {
+        $(window).scroll(function () {
             if ($(this).scrollTop() > 50) {
                 $('.navbar').addClass('shadow');
             } else {
