--- a/story.html
+++ b/story.html
@@ -2,31 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- title  -->
-    <title>Consult</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- title  -->
+  <title>Consult</title>
 
-    <!-- google fonts  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- google fonts  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!-- bootstrap 5.3    -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!-- bootstrap 5.3    -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-    <!-- fontawsome cdn  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- fontawsome cdn  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- style css  -->
-    <link rel="stylesheet" href="css/styles.css"> <!--Styles-->
-    
+  <!-- style css  -->
+  <link rel="stylesheet" href="css/styles.css"> <!--Styles-->
+
 
 </head>
 
 <body>
-<!-- topbar start here  -->
-<div class="container">
+  <!-- topbar start here  -->
+  <div class="container">
     <div class="row">
       <div class="col-md-6 ms-auto text-md-end">
         <div class="nav_top ms-auto">
@@ -46,12 +47,13 @@
     </div>
   </div>
   <!-- top bar end  -->
-  
+
   <!-- navbar start here  -->
   <nav class="navbar navbar-expand-lg  ">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="images/logo.gif" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -93,84 +95,111 @@
               <li><a class="dropdown-item" href="contact.html">Our Locations</a></li>
             </ul>
           </li>
-  
+
         </ul>
       </div>
     </div>
   </nav>
   <!-- navbar end here  -->
-    <section class="navigation" style="background-image: url(images/bg-3.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 py-5 text-center">
-                    <h2 class="fw-bold">Let IT Shine </h2>
-                </div>
-            </div>
+  <section class="navigation" style="background-image: url(images/bg-3.jpg);">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 py-5 text-center">
+          <h2 class="fw-bold">Let IT Shine </h2>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <section class="story py-5" id="story">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h1 class="fw-bold">Our Story</h1>
-                    <p>In 2009, Spotlight set out with a goal – to help customers realize the true potential of their IT organization. Over a decade later, we accomplish this through a unique and transparent business model. Our accomplished team, in-house technical expertise, and collective curiosity to hear YOUR story lays the foundation for a fruitful consulting engagement time and time again.</p>
-                </div>
-                <div class="col-md-8">
-                    <div class="year_story">
-                        <div class="line"></div>
-                        <span class="dot_one"></span>
-                        <span class="dotTwo"></span>
-                        <ul class="date_list">
-                            <li>
-                                <div class="d_vie">
-                                    <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things differently, bringing transparency to the consulting world, and a passion for helping their friends. Spotlight started operations out of a small office in Denver.</p>
-                                </div>
-                                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
-                                <div class="d_vie"><h1>2009</h1></div>
-                            </li>
-                            <li>
-                                <div class="d_vie">
-                                    <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things differently, bringing transparency to the consulting world, and a passion for helping their friends. Spotlight started operations out of a small office in Denver.</p>
-                                </div>
-                                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
-                                <div class="d_vie"><h1>2009</h1></div>
-                            </li>
-                            <li>
-                                <div class="d_vie">
-                                    <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things differently, bringing transparency to the consulting world, and a passion for helping their friends. Spotlight started operations out of a small office in Denver.</p>
-                                </div>
-                                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
-                                <div class="d_vie"><h1>2009</h1></div>
-                            </li>
-                            <li>
-                                <div class="d_vie">
-                                    <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things differently, bringing transparency to the consulting world, and a passion for helping their friends. Spotlight started operations out of a small office in Denver.</p>
-                                </div>
-                                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
-                                <div class="d_vie"><h1>2009</h1></div>
-                            </li>
-                            <li>
-                                <div class="d_vie">
-                                    <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things differently, bringing transparency to the consulting world, and a passion for helping their friends. Spotlight started operations out of a small office in Denver.</p>
-                                </div>
-                                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
-                                <div class="d_vie"><h1>2009</h1></div>
-                            </li>
-                            <li>
-                                <div class="d_vie">
-                                    <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things differently, bringing transparency to the consulting world, and a passion for helping their friends. Spotlight started operations out of a small office in Denver.</p>
-                                </div>
-                                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
-                                <div class="d_vie"><h1>2009</h1></div>
-                            </li>
-                            
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <section class="story py-5" id="story">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h1 class="fw-bold">Our Story</h1>
+          <p>In 2009, Astute360corpset out with a goal – to help customers realize the true potential of their IT
+            organization. Over a decade later, we accomplish this through a unique and transparent business model. Our
+            accomplished team, in-house technical expertise, and collective curiosity to hear YOUR story lays the
+            foundation for a fruitful consulting engagement time and time again.</p>
         </div>
-    </section>
+        <div class="col-md-8">
+          <div class="year_story">
+            <div class="line"></div>
+            <span class="dot_one"></span>
+            <span class="dotTwo"></span>
+            <ul class="date_list">
+              <li>
+                <div class="d_vie">
+                  <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things
+                    differently, bringing transparency to the consulting world, and a passion for helping their friends.
+                    Astute360corpstarted operations out of a small office in Denver.</p>
+                </div>
+                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
+                <div class="d_vie">
+                  <h1>2009</h1>
+                </div>
+              </li>
+              <li>
+                <div class="d_vie">
+                  <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things
+                    differently, bringing transparency to the consulting world, and a passion for helping their friends.
+                    Astute360corpstarted operations out of a small office in Denver.</p>
+                </div>
+                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
+                <div class="d_vie">
+                  <h1>2009</h1>
+                </div>
+              </li>
+              <li>
+                <div class="d_vie">
+                  <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things
+                    differently, bringing transparency to the consulting world, and a passion for helping their friends.
+                    Astute360corpstarted operations out of a small office in Denver.</p>
+                </div>
+                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
+                <div class="d_vie">
+                  <h1>2009</h1>
+                </div>
+              </li>
+              <li>
+                <div class="d_vie">
+                  <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things
+                    differently, bringing transparency to the consulting world, and a passion for helping their friends.
+                    Astute360corpstarted operations out of a small office in Denver.</p>
+                </div>
+                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
+                <div class="d_vie">
+                  <h1>2009</h1>
+                </div>
+              </li>
+              <li>
+                <div class="d_vie">
+                  <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things
+                    differently, bringing transparency to the consulting world, and a passion for helping their friends.
+                    Astute360corpstarted operations out of a small office in Denver.</p>
+                </div>
+                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
+                <div class="d_vie">
+                  <h1>2009</h1>
+                </div>
+              </li>
+              <li>
+                <div class="d_vie">
+                  <p>Jeff and Chris met while working at a consulting firm together. They wanted to do things
+                    differently, bringing transparency to the consulting world, and a passion for helping their friends.
+                    Astute360corpstarted operations out of a small office in Denver.</p>
+                </div>
+                <div class="d_vie"><i class="fa-solid fa-calendar-days"></i></div>
+                <div class="d_vie">
+                  <h1>2009</h1>
+                </div>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
@@ -179,9 +208,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 text-center">
-          <a href="javascript:" style="text-decoration: none;"><img src="images/logo.gif" class="img-fluid" style="max-width: 200px;" alt=""></a>
+          <a href="javascript:" style="text-decoration: none;"><img src="images/logo.gif" class="img-fluid"
+              style="max-width: 200px;" alt=""></a>
           <p class="fw-bold mb-0">Head Office </p>
-          <a href="#" style="list-style: none;text-decoration: none;">6065 Hillcroft Street, Suite # 610, Houston, TX 77081.</a>
+          <a href="#" style="list-style: none;text-decoration: none;">6065 Hillcroft Street, Suite # 610, Houston, TX
+            77081.</a>
           <ul class="d-flex justify-content-center mt-2 align-items-center" style="list-style: none; padding: 0;">
             <li class="me-2"><a href="#"><i class="fa-solid fa-brands fa-linkedin"></i></a></li>
             <li class="me-2"><a href="#"><i class="fa-solid fa-brands fa-facebook"></i></a></li>
@@ -191,9 +222,9 @@
           <div class="qcLink">
             <h2>What We Do</h2>
             <ul>
-              <li><a href="#">Core Service Areas</a></li>
-              <li><a href="#">Our Consulting Model</a></li>
-              <li><a href="#">Contact Us </a></li>
+              <li><a href="wedo.html#core">Core Service Areas</a></li>
+              <li><a href="wedo.html#consult_model">Our Consulting Model</a></li>
+              <li><a href="contact.html">Contact Us </a></li>
             </ul>
           </div>
         </div>
@@ -201,9 +232,8 @@
           <div class="qcLink">
             <h2>Who We Are </h2>
             <ul>
-              <li><a href="#">About Spotlight</a></li>
-              <li><a href="#">Our Team</a></li>
-              <li><a href="#">Our Values </a></li>
+              <li><a href="talent.html#why">About Astute360corp</a></li>
+              <li><a href="team.html">Our Team</a></li>
             </ul>
           </div>
         </div>
@@ -211,8 +241,8 @@
           <div class="qcLink">
             <h2>Talent</h2>
             <ul>
-              <li><a href="#">Find the telent</a></li>
-              <li><a href="#">Become a telent</a></li>
+              <li><a href="findtalent.html">Find the telent</a></li>
+              <li><a href="becometalent.html">Become a telent</a></li>
             </ul>
           </div>
         </div>
@@ -224,9 +254,9 @@
       <div class="row">
         <div class="col-md-12">
           <div class="d-flex justify-content-between">
-          <p class="text-center">© 2024 astute360corp.com | <a href="#">Privacy Policy</a>
-          </p>
-          <p>Website design by PRONAY</p>
+            <p class="text-center">© 2024 astute360corp.com | <a href="#">Privacy Policy</a>
+            </p>
+            <p>Website design by Astute360corp</p>
           </div>
         </div>
       </div>
@@ -237,17 +267,20 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> <!--Jquery Cdn-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> <!--Bootstrap-->
-    <script>
-        $(window).scroll(function() {
-            if ($(this).scrollTop() > 50) {
-                $('.navbar').addClass('shadow');
-            } else {
-                $('.navbar').removeClass('shadow');
-            }
-        });
-    </script>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script> <!--Jquery Cdn-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script> <!--Bootstrap-->
+  <script>
+    $(window).scroll(function () {
+      if ($(this).scrollTop() > 50) {
+        $('.navbar').addClass('shadow');
+      } else {
+        $('.navbar').removeClass('shadow');
+      }
+    });
+  </script>
 
 
 </body>
