--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
   <!-- navbar start here  -->
   <nav class="navbar navbar-expand-lg  ">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.gif" alt=""></a>
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -238,7 +238,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 text-center">
-          <a href="javascript:" style="text-decoration: none;"><img src="images/logo.gif" class="img-fluid" style="max-width: 200px;" alt=""></a>
+          <a href="javascript:" style="text-decoration: none;"><img src="images/logo.png" class="img-fluid" style="max-width: 200px;" alt=""></a>
           <p class="fw-bold mb-0">Head Office </p>
           <a href="#" style="list-style: none;text-decoration: none;">6065 Hillcroft Street, Suite # 610, Houston, TX 77081.</a>
           <ul class="d-flex justify-content-center mt-2 align-items-center" style="list-style: none; padding: 0;">
