--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="col-md-6">
           <div class="svcLpart">
             <h1>Service Not Sale </h1>
-            <p class="mb-2">Since 2009 we have provided dedicated service to our clients and consultants – our friends. With a rich history in consulting, we deliver the best people and solve your difficult business and technical challenges. It is this commitment that forges relationships and builds value through the intersection of trust and transparency.</p>
+            <p class="mb-2">Since 2019 we have provided dedicated service to our clients and consultants – our friends. With a rich history in consulting, we deliver the best people and solve your difficult business and technical challenges. It is this commitment that forges relationships and builds value through the intersection of trust and transparency.</p>
             <a href="wedo.html" class="btn_secondary mx-0 mt-2">What We Do</a>
           </div>
         </div>
@@ -398,19 +398,19 @@
       <div class="row">
         <div class="col-md-12">
           <div class="client_container">
-            <a href="javascript:">
+            <a href="https://www.accenture.com/in-en">
               <img src="images/Acc_Logo_Black_Purple_RGB.png" class="img-fluic" alt="">
             </a>
-            <a href="javascript:">
+            <a href="https://www.emergentbiosolutions.com/">
               <img src="images/emergent-logo-header.svg" class="img-fluic" alt="">
             </a>
-            <a href="javascript:">
+            <a href="https://www.cognizant.com/mx/en">
               <img src="images/COG-Logo-2022-1.svg" class="img-fluic" alt="">
             </a>
-            <a href="javascript:">
+            <a href="https://www.radyantinc.com/">
               <img src="images/radient-inc.png" class="img-fluic" alt="">
             </a>
-            <a href="javascript:">
+            <a href="https://www.midstream-terminal.com/">
               <img src="images/mtslogo_mid.png" class="img-fluic" alt="">
             </a>
           </div>
@@ -435,7 +435,7 @@
         <div class="col-md-4">
           <div class="mt-2 text-center">
             <p class="fw-bold m-0 ">Call Us On</p>
-            <p class="m-0">+1832-325-7332</p>
+            <p class="m-0">+469-423-1192</p>
           </div>
           <div class="mt-2 text-center">
             <p class="fw-bold m-0">Email Us At</p>
@@ -443,7 +443,7 @@
           </div>
           <div class="mt-2 text-center">
             <p class="fw-bold m-0">Visit Office</p>
-            <p class="m-0">Address : 6065 Hillcroft Street, Suite # 610, Houston, TX 77081.</p>
+            <p class="m-0">Address : 6065 Hillcroft Street, Suite # 510, Houston, TX 77081.</p>
             <p class="fw-bold m-0">Bangladesh Office</p>
             <p class="m-0">Address : The Laureate, Level # C-6, House # 56, Road # 11, Block # F, Banani, Dhaka-1213, Bangladesh.</p>
           </div>
@@ -544,11 +544,6 @@
 
 
   <script>
-    $(document).ready(function() {
-      $('.counter').counterUp({
-
-      });
-    })
     $(window).scroll(function() {
       if ($(this).scrollTop() > 50) {
         $('.navbar').addClass('shadow');
